fix: Fix overflow for mobile

--- a/src/root.css
+++ b/src/root.css
@@ -22,6 +22,7 @@ body, html, #root {
 
 #root {
     color: #ffffff;
+    overflow: hidden;
 }
 
 #root canvas {
